tests/invalid/Intersection_Invalid_1.whiley
type EmptyList is int[] & bool[]

function size(EmptyList l) -> int:
    return |l|

function f(int[] x) -> int:
    return size(x)
